// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DoAndDontList DoDontList.Item matches snapshot: DoDontList.Item 1`] = `
<div>
  <li>
    <svg
      aria-hidden="true"
      class="nhsuk-icon nhsuk-icon__tick"
      height="34"
      viewBox="0 0 24 24"
      width="34"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.4 7.8l-8.5 8.4L5.6 12"
        fill="none"
        stroke="#007f3b"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    Text
  </li>
</div>
`;

exports[`DoAndDontList list type "do" matches snapshot: DoDontList-Do 1`] = `
<div>
  <div
    class="nhsuk-do-dont-list"
  >
    <h3
      class="nhsuk-do-dont-list__label"
    >
      Do
    </h3>
    <ul
      class="nhsuk-list nhsuk-list--tick"
    />
  </div>
</div>
`;

exports[`DoAndDontList list type "dont" matches snapshot: DoDontList-Dont 1`] = `
<div>
  <div
    class="nhsuk-do-dont-list"
  >
    <h3
      class="nhsuk-do-dont-list__label"
    >
      Don't
    </h3>
    <ul
      class="nhsuk-list nhsuk-list--cross"
    />
  </div>
</div>
`;
